--- a/index.html
+++ b/index.html
@@ -24,11 +24,11 @@
     <meta property="og:description" content="">
     <meta property="og:type" content="website">
   </head>
-  <body data-home-page="Home.html" data-home-page-title="Home" class="u-body u-xl-mode" data-lang="en"><header class="u-clearfix u-header u-header" id="sec-79f2"><div class="u-clearfix u-sheet u-sheet-1">
+  <body data-home-page="Home.html" data-home-page-title="Home" class="u-body u-gradient u-xl-mode" data-lang="en" style="background-image: linear-gradient(#478ac9, #425465);"><header class="u-clearfix u-header u-header" id="sec-79f2"><div class="u-clearfix u-sheet u-valign-middle u-sheet-1">
         <a href="https://nicepage.com" class="u-image u-logo u-image-1" data-image-width="1080" data-image-height="1080">
           <img src="images/CupCatStudios-1.png" class="u-logo-image u-logo-image-1">
         </a>
-        <nav class="u-menu u-menu-dropdown u-offcanvas u-menu-1">
+        <nav class="u-menu u-menu-one-level u-offcanvas u-menu-1">
           <div class="menu-collapse" style="font-size: 1rem; letter-spacing: 0px;">
             <a class="u-button-style u-custom-left-right-menu-spacing u-custom-padding-bottom u-custom-top-bottom-menu-spacing u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base" href="#">
               <svg class="u-svg-link" viewBox="0 0 24 24"><use xmlns:xlink="http://www.w3.org/1999/xlink" xlink:href="#menu-hamburger"></use></svg>
@@ -36,21 +36,17 @@
 </g></svg>
             </a>
           </div>
-          <div class="u-nav-container">
+          <div class="u-custom-menu u-nav-container">
             <ul class="u-nav u-unstyled u-nav-1"><li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base" href="Home.html" style="padding: 10px 20px;">Home</a>
-</li><li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base" href="About.html" style="padding: 10px 20px;">About</a>
-</li><li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base" href="Contact.html" style="padding: 10px 20px;">Contact</a>
-</li><li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base" href="Page-1.html" style="padding: 10px 20px;">Page 1</a>
+</li><li class="u-nav-item"><a class="u-button-style u-nav-link u-text-active-palette-1-base u-text-hover-palette-2-base" href="PrivacyPolicy-.html" style="padding: 10px 20px;">PrivacyPolicy </a>
 </li></ul>
           </div>
-          <div class="u-nav-container-collapse">
+          <div class="u-custom-menu u-nav-container-collapse">
             <div class="u-black u-container-style u-inner-container-layout u-opacity u-opacity-95 u-sidenav">
               <div class="u-inner-container-layout u-sidenav-overflow">
                 <div class="u-menu-close"></div>
                 <ul class="u-align-center u-nav u-popupmenu-items u-unstyled u-nav-2"><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Home.html">Home</a>
-</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="About.html">About</a>
-</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Contact.html">Contact</a>
-</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="Page-1.html">Page 1</a>
+</li><li class="u-nav-item"><a class="u-button-style u-nav-link" href="PrivacyPolicy-.html">PrivacyPolicy </a>
 </li></ul>
               </div>
             </div>
@@ -61,13 +57,23 @@
     <section class="u-clearfix u-section-1" id="sec-2133">
       <div class="u-clearfix u-sheet u-sheet-1">
         <img class="u-image u-image-default u-image-1" src="images/Featuregraphic.PNG" alt="" data-image-width="1024" data-image-height="500">
-        <h1 class="u-text u-text-default u-text-1">Pixel Cricket Coming Soon</h1>
+        <h1 class="u-text u-text-default u-text-grey-5 u-text-1">Pixel Cricket Coming Soon</h1>
+        <h3 class="u-text u-text-default u-text-2">Tiny Robo Puzzles </h3>
+        <h3 class="u-text u-text-default u-text-3">Nico Cat Story<span style="font-weight: 700;">
+            <span style="font-weight: 400;"></span>
+          </span>
+        </h3>
+        <img class="u-image u-image-round u-radius-10 u-image-2" src="images/unnamed.webp" alt="" data-image-width="1499" data-image-height="754">
+        <img class="u-image u-image-default u-image-3" src="images/TinyRoboPuzzles-MainMenu-Android-Unity2021.3.16f1Personal_DX11_24-12-202208_50_54.png" alt="" data-image-width="1920" data-image-height="886">
+        <img class="u-image u-image-round u-radius-10 u-image-4" src="images/playstore.png" alt="" data-image-width="1084" data-image-height="325" data-href="https://play.google.com/store/apps/details?id=com.shironobe.adoptedcat" data-target="_blank">
+        <img class="u-image u-image-round u-radius-10 u-image-5" src="images/playstore.png" alt="" data-image-width="1084" data-image-height="325" data-href="https://play.google.com/store/apps/details?id=com.Kitarp.TinyRoboPuzzles" data-target="_blank">
       </div>
     </section>
     
     
     <footer class="u-align-center u-clearfix u-footer u-grey-80 u-footer" id="sec-d2d2"><div class="u-clearfix u-sheet u-sheet-1">
-        <p class="u-small-text u-text u-text-variant u-text-1">Sample text. Click to select the Text Element.</p>
+        <p class="u-text u-text-default u-text-1"> Google Play and the Google Play logo are trademarks of Google LLC.<br>App Store and the App Store logo are trademarks of Apple Inc.
+        </p>
       </div></footer>
   
 </body></html>
