--- a/index.html
+++ b/index.html
@@ -56,15 +56,10 @@
       </div></header>
     <section class="u-clearfix u-section-1" id="sec-2133">
       <div class="u-clearfix u-sheet u-sheet-1">
-        <img class="u-image u-image-default u-image-1" src="images/Featuregraphic.PNG" alt="" data-image-width="1024" data-image-height="500">
+        <img class="u-image u-image-default u-preserve-proportions u-image-1" src="images/Featuregraphic.PNG" alt="" data-image-width="1024" data-image-height="500">
         <h1 class="u-text u-text-default u-text-grey-5 u-text-1">Pixel Cricket Coming Soon</h1>
-        <h3 class="u-text u-text-default u-text-2">Tiny Robo Puzzles </h3>
-        <h3 class="u-text u-text-default u-text-3">Nico Cat Story<span style="font-weight: 700;">
-            <span style="font-weight: 400;"></span>
-          </span>
-        </h3>
-        <img class="u-image u-image-round u-radius-10 u-image-2" src="images/unnamed.webp" alt="" data-image-width="1499" data-image-height="754">
-        <img class="u-image u-image-default u-image-3" src="images/TinyRoboPuzzles-MainMenu-Android-Unity2021.3.16f1Personal_DX11_24-12-202208_50_54.png" alt="" data-image-width="1920" data-image-height="886">
+        <img class="u-expanded-width-xs u-image u-image-round u-preserve-proportions u-radius-10 u-image-2" src="images/unnamed.webp" alt="" data-image-width="1499" data-image-height="754">
+        <img class="u-image u-image-default u-preserve-proportions u-image-3" src="images/TinyRoboPuzzles-MainMenu-Android-Unity2021.3.16f1Personal_DX11_24-12-202208_50_54.png" alt="" data-image-width="1920" data-image-height="886">
         <img class="u-image u-image-round u-radius-10 u-image-4" src="images/playstore.png" alt="" data-image-width="1084" data-image-height="325" data-href="https://play.google.com/store/apps/details?id=com.shironobe.adoptedcat" data-target="_blank">
         <img class="u-image u-image-round u-radius-10 u-image-5" src="images/playstore.png" alt="" data-image-width="1084" data-image-height="325" data-href="https://play.google.com/store/apps/details?id=com.Kitarp.TinyRoboPuzzles" data-target="_blank">
       </div>
