--- a/Privacy-Policy.html
+++ b/Privacy-Policy.html
@@ -68,7 +68,7 @@
           <br>*Unity Analytics (Provided by Unity Technologies)&nbsp;Unity Technologies Privacy Policy :<a href="https://unity.com/legal/privacy-policy" rel="noopener noreferrer" target="_blank" class="u-active-none u-border-none u-btn u-button-style u-hover-none u-none u-text-palette-1-base u-btn-1">https://unity.com/legal/privacy-policy</a>
           <br>*Yodo1 Sdk(Provided by Yodo1)&nbsp;Yodo1 Privacy Policy :&nbsp;<a href="https://www.yodo1.com/privacy" rel="noopener noreferrer" target="_blank" class="u-active-none u-border-none u-btn u-button-style u-hover-none u-none u-text-palette-1-base u-btn-2">https://www.yodo1.com/privacy</a>
           <br>
-          <br>*Gameanalytics(Provided by Gameanalytics)Gameanalytics Privacy Policy:&nbsp;<br>
+          <br>*Gameanalytics(Provided by Gameanalytics)Gameanalytics Privacy Policy:<br>&nbsp; <br>
           <br>*Firebase<br>Firebase is an analytics service provided by Google Inc.You may opt-out of certain Firebase features through your mobile device settings, such as your device advertising settings or by following the instructions provided by Google in their Privacy Policy:&nbsp;<a href="https://policies.google.com/privacy?hl=en" class="u-active-none u-border-none u-btn u-button-style u-hover-none u-none u-text-palette-1-base u-btn-3">https://policies.google.com/privacy?hl=en</a>We also encourage you to review the Google's policy for safeguarding your data:&nbsp;<a href="https://support.google.com/analytics/answer/6004245" class="u-active-none u-border-none u-btn u-button-style u-hover-none u-none u-text-palette-1-base u-btn-4">https://support.google.com/analytics/answer/6004245</a>.For more information on what type of information Firebase collects, please visit the Google Privacy &amp; Terms web page:&nbsp;<a href="https://policies.google.com/privacy?hl=en" class="u-active-none u-border-none u-btn u-button-style u-hover-none u-none u-text-palette-1-base u-btn-5">https://policies.google.com/privacy?hl=en</a>
           <br>
           <br>Log Data<br>
@@ -85,7 +85,7 @@
           <br>We may update our Privacy Policy from time to time. Thus, you are advised to review this page periodically for any changes. We will notify you of any changes by posting the new Privacy Policy on this page. These changes are effective immediately after they are posted on this page.<br>
           <br>Contact The Developer If you have any questions or suggestions about my Privacy Policy, do not hesitate to contact Developer at froze06@yahoo.com
         </p>
-        <a href="https://nicepage.com/html-templates" class="u-active-none u-border-2 u-border-no-left u-border-no-right u-border-no-top u-border-palette-1-base u-btn u-btn-rectangle u-button-style u-hover-none u-none u-btn-6"> https://gameanalytics.com/trust/</a>
+        <a href="https://gameanalytics.com/trust/" class="u-border-1 u-border-active-palette-2-base u-border-hover-palette-1-base u-border-no-left u-border-no-right u-border-no-top u-btn u-button-style u-none u-text-palette-1-base u-btn-6">https://gameanalytics.com/trust/</a>
       </div>
     </section>
     
