--- a/Privacy-Policy.html
+++ b/Privacy-Policy.html
@@ -61,7 +61,7 @@
         <p class="u-text u-text-2"> CupCat Studios has established the following privacy policy regarding the handling of user information in applications provided by the Company.<br>&nbsp;<br>If you do not agree with this policy, please refrain from using Our applications.<br>
           <br>&nbsp;This page is used to inform visitors regarding Our policies with the collection, use, and disclosure of Personal Information if anyone decided to use my Service.<br>
           <br>If you choose to use Our Service, then you agree to the collection and use of information in relation to this policy. The Personal Information that We collect is used for providing and improving the Service.We will not use or share your information with anyone except as described in this Privacy Policy.<br>
-          <br>The terms used in this Privacy Policy have the same meanings as in our Terms and Conditions, which is accessible at No prince needed unless otherwise defined in this Privacy Policy.<br>
+          <br>The terms used in this Privacy Policy have the same meanings as in our Terms and Conditions, which is accessible at No price needed unless otherwise defined in this Privacy Policy.<br>
           <br>Information Collection and Use<br>
           <br>For a better experience, while using our Service, I may require you to provide us with certain personally identifiable information. The information that I request will be retained on your device and is not collected by me in any way.<br>The game does use third party services that may collect information used to identify you.<br>
           <br>Link to privacy policy of third party service providers used by the games<br>
