--- a/Privacy-Policy.html
+++ b/Privacy-Policy.html
@@ -56,7 +56,7 @@
       </div></header>
     <section class="u-clearfix u-gradient u-section-1" id="sec-c632">
       <div class="u-clearfix u-sheet u-sheet-1">
-        <h1 class="u-text u-text-1">Pri<span style="font-size: 1.25rem;"></span>vacy Ploicy<span style="font-size: 1.875rem;"></span>
+        <h1 class="u-text u-text-1">Pri<span style="font-size: 1.25rem;"></span>vacy Policy<span style="font-size: 1.875rem;"></span>
         </h1>
         <p class="u-text u-text-2"> CupCat Studios has established the following privacy policy regarding the handling of user information in applications provided by the Company.<br>&nbsp;<br>If you do not agree with this policy, please refrain from using Our applications.<br>
           <br>&nbsp;This page is used to inform visitors regarding Our policies with the collection, use, and disclosure of Personal Information if anyone decided to use my Service.<br>
